--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     </nav>
     <img class="min-img" src="/minion.jpg" alt=""></img>
     <div class="input-section">
-        <h3>Enter Your Text Here:</h3>
+        <h3>Enter Your Text Here ❤️:</h3>
     <textarea placeholder="Enter your Sentence in English" id="tarea1" cols="55" rows="13"></textarea>
     </div>
     <button class="btn-translate" id="btn-translate">Translate</button>
 
     <div class="output-section">
-        <h3>Minion Says:</h3>
-        <textarea placeholder="Minion will translate for you here" id="tarea2" cols="55" rows="13"></textarea>
+        <h3>Minion Says 😃:</h3>
+        <textarea placeholder="Minion will translate for you here" id="tarea2" cols="55" rows="13" ></textarea>
     </div>
+    <nav class="bottom-nav">
+        <h2>About:</h2>
+        <h3>Are you a Minion Fan? Did you know that the gibberish minion speak is called Banana Language. Use the translator to convert your text fron English to Banana Language .</h3>
+
+    </nav>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
